# next-plaid

./: Cargo.toml  README.md
.claude-plugin/: marketplace.json
.github/workflows/: publish-python-cuda.yaml
colgrep/: Cargo.toml  README.md
colgrep/python-sdk/: Cargo.toml  pyproject.toml
colgrep/python-sdk/python/colgrep_parser/: __init__.py
colgrep/src/install/: marketplace.json  plugin.json
next-plaid-api/: README.md
next-plaid-api/python-sdk/: pyproject.toml
next-plaid-api/python-sdk/next_plaid_client/: __init__.py
next-plaid-api/src/: main.rs
next-plaid-onnx/python/: pyproject.toml
next-plaid-onnx/python/src/colbert_export/: __init__.py  cli.py
next-plaid-onnx/python/tests/: test_cli.py
next-plaid-python/: Cargo.toml  generate_configs.py  pyproject.toml.template
next-plaid-python/src/: lib.rs
next-plaid/src/: filtering.rs  kmeans.rs
plugins/colgrep/.claude-plugin/: plugin.json
